--- a/mydidata/templates/mydidata/question_item_form.html
+++ b/mydidata/templates/mydidata/question_item_form.html
@@ -4,7 +4,7 @@
       {% url 'mydidata:question_update' question.uuid %}{% else %}{% url 'mydidata:question_new' %}{% endif %}"
       method="post">
     {% csrf_token %}
-    <div id="gi-h-w">
+    <div id="gi-h-w">s
         <p>{{ form.question_text | safe}}</p>
         <span>{{ form.question_text.errors }}</span>
     </div>
