Password reset added

--- a/mydidata/templates/mydidata/login.html
+++ b/mydidata/templates/mydidata/login.html
@@ -24,8 +24,10 @@
                 </table>
                 {% if form.errors %}
                     <p class=" label label-danger">
-                        Your username and password didn't match. 
-                        Please try again.
+                        O login e a senha não combinam.                        
+                    </p>
+                    <p>
+                    <a href="/password_reset">Clique aqui caso você tenha esquecido seu login ou sua senha.</a>
                     </p>
                 {% endif %}
 
