--- a/mydidata/templates/mydidata/login.html
+++ b/mydidata/templates/mydidata/login.html
@@ -34,6 +34,11 @@
                 <p>
                 <a href="/password_reset">Esqueceu o nome de usuário ou senha? Clique aqui!</a>
                 </p>
+                <p>
+                    <a href="/mydidata/signup/8">Não possui uma conta ainda? Clique aqui!</a>
+                </p>
+    
+                
             </form>
 
 			
