--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -38,8 +38,9 @@
     </head>
     
     <body>
+    <main role="main">
         {# Navigation Menu #}
-        <header>
+        <!-- <header>
             <div class="navbar navbar-default navbar-static-top 
             {% block nav-style %}{% endblock %}">
                 <div class="container p-none">
@@ -82,9 +83,55 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </header> -->
+        
+        <header>
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+              <a class="navbar-brand" href="/mydidata">Aprenda Fazendo!</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/mydidata">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/mydidata/login/">Login</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'mydidata:disciplines' %}"
+                                   >Assuntos</a>
+                  </li>
+                  <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:my_progress' %}"
+                    >Meu Progresso</a></li>
+                  <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:tests' %}"                    
+                    >Avaliações</a></li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item active"><a class="nav-link" href="/mydidata/logout/">Sair</a></li>
+                {%endif%}    
+            
+                {% if user.is_superuser%}
+                    <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:classes' %}"
+                        >Turmas</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:resource_rooms' %}"
+                        >Turmas de Reforço</a></li>
+                    
+                {% endif %}
+                
+
+                </ul>
+                <form class="form-inline mt-2 mt-md-0">
+                  <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+              </div>
+            </nav>
+          </header>
+      
+    
         {# The Document Body #}
-        <div id="site-wrapper">
+        <div id="site-wrapper" style="margin-top: 8px;">
             {% block content %}
                 if you see this, something is wrong!
             {% endblock content %}
@@ -92,16 +139,22 @@
         {# The Footer #}
         <div class="footer">
             <div class="container">
-                <p>Desenvolvido por: Thiago Nunes; </p>
-                <p>Home page: <a href='http://thiagonunes.dev'> thiagonunes.dev</a>&nbsp&nbsp Contato: thiago.nunes@iff.edu.br</p>
+                <p>Mantido por: Camila Botelho da Silva </p>
+                <p>Contato: aprendafazendocursodeinfo@gmail.com</p>
 
             </div>
         </div>
+    </main>
     </body>
     {# Set of blocks that can be used to display JavaScript files #}
     {% block footer_javascript %}
         {% block footer_javascript_site %}
-		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script> -->
+        <script src="/static/js/vendor/popper.min.js"></script>
+        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+        <script src="/static/js/vendor/holder.min.js"></script>
+		    
 		    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 		
             <!-- <script src="/static/js/jquery.min.js"></script>
