--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -6,49 +6,121 @@
 
     {# Hero Section #}
 
-    <div class="mkt-s1">
-        <div class="mkt-s1-body container ">
-            <div class="row">
-                <h1 class="col-md-8">Sistema Didata</h1>
+      <main role="main">
+  
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="first-slide" src="/static/images/s81.jpg" alt="First slide">
+              <div class="container">
+                <div class="carousel-caption text-left">
+                  <h1>Planilhas trabalharando por você!</h1>
+                  <p>Domine planilhas eletrônicas e ganhe mais tempo para o que importa!</p>
+                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastra-se hoje!</a></p>
+                </div>
+              </div>
             </div>
-            <div class="row">
-                <h3 class="col-md-8">Aprenda com a Mão na Massa!</h3>
+            <div class="carousel-item">
+              <img class="second-slide" src="/static/images/i11.jpg" alt="Second slide">
+              <div class="container">
+                <div class="carousel-caption text-left">
+                  <h1>A Internet ao seu dispor!</h1>
+                  <p><span >Domine a Internet e as principais ferramentas online.</span></p>
+                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se hoje!</a></p>
+                </div>
+              </div>
             </div>
-            <div class="row">
-                <p class="col-md-8">Prof. Thiago Ribeiro Nunes</p>
+            <div class="carousel-item">
+              <img class="third-slide" src="/static/images/p3.jpg" alt="Third slide">
+              <div class="container">
+                <div class="carousel-caption text-left">
+                  <h1><span  style="color:#212529">Documentos e Apresentações Profissionais</span></h1>
+                  <p><span  style="color:#212529">Crie uma boa impressão com apresentações de tirar o fôlego!</span></p>
+                  
+                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se hoje!</a></p>
+                </div>
+              </div>
             </div>
-            <div class="row">
-                {# First Signup Link #}
-                <!--<a href=""-->
-                <!--   class="sign-up btn btn-success">Sign Up Now for $15/month!-->
-                <!--</a>-->
-            </div>
+          </div>
+          <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true" ></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-    </div>
+  
+  
+        <!-- Marketing messaging and featurettes
+        ================================================== -->
+        <!-- Wrap the rest of the page in another container to center all the content. -->
+  
+        <div class="container marketing">
+  
+          <!-- Three columns of text below the carousel -->
+          <div class="container">
+              <form class="form-inline">
+                    <input class="form-control col-sm-10" type="text" placeholder="O que você deseja aprender?" aria-label="Digite aqui o que você mais deseja aprender.">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
+            </form>
 
-    {# Main Section #}
-    <div class="mkt-s2 container">
-        <h2 class="mkt-s2-h">Porque utilizar o Didata?</h2>
-        <div class="mkt-s2-body">
-            <div class="col-md-4 mkt-vp">
-                <img class="" src="/static/images/clock.png"/>
-                <h5>Aprenda Cada Conteúdo de Forma Contextualizada!</h5>
-                <p>Oferecemos uma série de tutoriais e atividades práticas que favorecem o seu aprendizado</p>
-            </div>
-            <div class="col-md-4 mkt-vp">
-                <img class="" src="/static/images/lightbulb.png"/>
-                <h5>Conheça seu aluno</h5>
-                <p>Acompanhando o desempenho indivual dos alunos por tópico de ementa e questão possibilita
-                intervenções mais precisas visando o aprendizado mais completo dos tópicos abordados.</p>
-            </div>
-            <div class="col-md-4 mkt-vp">
-                <img class="" src="/static/images/dollar.png"/>
-                <h5>Possibilite ritmos de aprendizado diferenciados</h5>
-                <p>Utilizando o Didata você pode proporcionar ritmos diferenciados de aprendizado, de acordo com o perfil de cada aluno</p>
-            </div>
-        </div>
-        {# Second Signup Link #}
-        <!--<a href="" class=" sgn-btm ">SIGN UP FOR ONLY $15/MONTH</a>-->
-    </div>
+          </div><!-- /.row -->
+  
+  
+          <!-- START THE FEATURETTES -->
+  
+          <hr class="featurette-divider">
 
+          <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">O computador é um poderoso aliado. <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Clique e veja por você!</span></a></h2>
+              <p class="lead">Nosso conteúdo é preparado para descomplicar as principais ferramentas de escritório e Internet. Desenvolva habilidades em Informática a partir de problemas reais e dê um plus nos seus negócios e na sua vida pessoal de forma divertida e interativa! </p>
+            </div>
+            <div class="col-md-5">
+              <img class="featurette-image img-fluid mx-auto" src="/static/images/s6.jpg" alt="Generic placeholder image">
+            </div>
+          </div>
+  
+          <hr class="featurette-divider">
+  
+          <div class="row featurette">
+            <div class="col-md-7 order-md-2">
+              <h2 class="featurette-heading">Domine os recursos mais modernos em nuvens na Internet. <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Nas nuvens!</span></a></h2>
+              <p class="lead">As últimas tendências apontam para um crescimento do uso de nuvens na Inetrnet. Nelas, você pode criar e editar documentos de forma compartilhada, favorecendo o trabalho em equipe.</p>
+            </div>
+            <div class="col-md-5 order-md-1">
+              <img class="featurette-image img-fluid mx-auto" src="/static/images/p2.jpg" alt="Generic placeholder image">
+            </div>
+          </div>
+  
+          <hr class="featurette-divider">
+  
+          <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">Ganhe mais tempo para o que interessa usando planilhas.<a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Clique e veja como é fácil!</span></a></h2>
+              <p class="lead">Além de colocar você a frente nas melhores oportunidades, planilhas são indispensáveis para quem deseja colocar o computador a seu serviço! Automatize tarefas rotineiras de controle de gastos e alavanque suas finanças.</p>
+            </div>
+            <div class="col-md-5">
+              <img class="featurette-image img-fluid mx-auto" src="/static/images/p1.jpg" alt="Generic placeholder image">
+            </div>
+          </div>
+  
+          <hr class="featurette-divider">
+  
+  
+          <!-- /END THE FEATURETTES -->
+  
+        </div><!-- /.container -->
+  
+  
+        <!-- FOOTER -->
+      </main>
+  
 {% endblock content %}
