Aprenda Fazendo reestruturado

--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -6,7 +6,7 @@
 
     {# Hero Section #}
 
-      <main role="main">
+      
   
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -19,7 +19,7 @@
               <img class="first-slide" src="/static/images/s81.jpg" alt="First slide">
               <div class="container">
                 <div class="carousel-caption text-left">
-                  <h1>Planilhas trabalharando por você!</h1>
+                  <h1>Planilhas trabalhando por você!</h1>
                   <p>Domine planilhas eletrônicas e ganhe mais tempo para o que importa!</p>
                   <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastra-se hoje!</a></p>
                 </div>
@@ -93,7 +93,7 @@
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading">Domine os recursos mais modernos em nuvens na Internet. <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Nas nuvens!</span></a></h2>
-              <p class="lead">As últimas tendências apontam para um crescimento do uso de nuvens na Inetrnet. Nelas, você pode criar e editar documentos de forma compartilhada, favorecendo o trabalho em equipe.</p>
+              <p class="lead">As últimas tendências apontam para um crescimento do uso de nuvens na Internet. Nelas, você pode criar e editar documentos de forma compartilhada, favorecendo o trabalho em equipe.</p>
             </div>
             <div class="col-md-5 order-md-1">
               <img class="featurette-image img-fluid mx-auto" src="/static/images/p2.jpg" alt="Generic placeholder image">
@@ -121,6 +121,6 @@
   
   
         <!-- FOOTER -->
-      </main>
+
   
 {% endblock content %}
