Adapting images to screen size

--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -16,12 +16,17 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="first-slide" src="/static/images/s81.jpg" alt="First slide">
+                <!-- <picture class="first-slide">
+                    <source class="first-slide" srcset="/static/images/s81.jpg" media="(min-width: 1400px)"type="image/jpeg">
+                    <source class="first-slide" srcset="/static/images/s81640.jpg" media="(min-width: 577px)" type="image/jpeg">
+                </picture> -->
+
+              <img class="first-slide img-responsive" src="/static/images/s81.jpg" alt="First slide">
               <div class="container">
                 <div class="carousel-caption text-left">
                   <h1>Planilhas trabalhando por você!</h1>
                   <p>Domine planilhas eletrônicas e ganhe mais tempo para o que importa!</p>
-                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastra-se hoje!</a></p>
+                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
             </div>
@@ -31,7 +36,7 @@
                 <div class="carousel-caption text-left">
                   <h1>A Internet ao seu dispor!</h1>
                   <p><span >Domine a Internet e as principais ferramentas online.</span></p>
-                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se hoje!</a></p>
+                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
             </div>
@@ -42,7 +47,7 @@
                   <h1><span  style="color:#212529">Documentos e Apresentações Profissionais</span></h1>
                   <p><span  style="color:#212529">Crie uma boa impressão com apresentações de tirar o fôlego!</span></p>
                   
-                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se hoje!</a></p>
+                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
             </div>
