--- a/mydidata/static/css/mydidata.css
+++ b/mydidata/static/css/mydidata.css
@@ -24,16 +24,27 @@ body {
   
   /* Declare heights because of positioning of img element */
   .carousel-item {
-    height: 32rem;
+    /* height: 32rem; */
+    max-height: 32rem;
     background-color: #777;
   }
   .carousel-item > img {
-    position: absolute;
+    /* position: absolute; */
     object-fit: cover !important;
     top: 0;
     left: 0;
     min-width: 100%;
-    height: 32rem;
+    height: auto;
+    max-height: 32rem;
+    width: auto;
+    max-width: 100%;
+    /* max-height: 100%; */
+    /* width: auto;
+    min-width: 100%;
+    object-fit: cover !important; 
+    height: auto;
+    max-width: 100%;
+    max-height: 100%; */
   }
   .carousel-control-next,
   .carousel-control-prev {
