--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -137,23 +137,27 @@
             {% endblock content %}
         </div>
         {# The Footer #}
-        <div class="footer">
-            <div class="container">
-                <p>Mantido por: Camila Botelho da Silva </p>
-                <p>Contato: aprendafazendocursodeinfo@gmail.com</p>
-
-            </div>
-        </div>
     </main>
+    <!-- Footer -->
+<footer class="font-small py-4 bg-dark fixed-bottom">
+
+    <!-- Copyright -->
+    <div class="text-center text-white-50">© 2020 Copyright:
+      <a href="http://aprendafazendo.net">aprendafazendo.net</a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
     </body>
     {# Set of blocks that can be used to display JavaScript files #}
     {% block footer_javascript %}
         {% block footer_javascript_site %}
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script> -->
-        <script src="/static/js/vendor/popper.min.js"></script>
+        <script src="/static/js/popper.min.js"></script>
         <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-        <script src="/static/js/vendor/holder.min.js"></script>
+        <script src="/static/js/holder.min.js"></script>
 		    
 		    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 		
