Adapting images to screen size

--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -26,7 +26,7 @@
                 <div class="carousel-caption text-left">
                   <h1>Planilhas trabalhando por você!</h1>
                   <p>Domine planilhas eletrônicas e ganhe mais tempo para o que importa!</p>
-                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
+                  <p><a class="btn btn-md btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
             </div>
@@ -36,7 +36,7 @@
                 <div class="carousel-caption text-left">
                   <h1>A Internet ao seu dispor!</h1>
                   <p><span >Domine a Internet e as principais ferramentas online.</span></p>
-                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
+                  <p><a class="btn btn-md btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
             </div>
@@ -47,7 +47,7 @@
                   <h1><span  style="color:#212529">Documentos e Apresentações Profissionais</span></h1>
                   <p><span  style="color:#212529">Crie uma boa impressão com apresentações de tirar o fôlego!</span></p>
                   
-                  <p><a class="btn btn-lg btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
+                  <p><a class="btn btn-md btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
             </div>
