Adapting images to screen size

--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -24,7 +24,7 @@
               <img class="first-slide img-responsive" src="/static/images/s81.jpg" alt="First slide">
               <div class="container">
                 <div class="carousel-caption text-left">
-                  <h1>Planilhas trabalhando por você!</h1>
+                  <h2>Planilhas trabalhando por você!</h2>
                   <p>Domine planilhas eletrônicas e ganhe mais tempo para o que importa!</p>
                   <p><a class="btn btn-md btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
@@ -34,7 +34,7 @@
               <img class="second-slide" src="/static/images/i11.jpg" alt="Second slide">
               <div class="container">
                 <div class="carousel-caption text-left">
-                  <h1>A Internet ao seu dispor!</h1>
+                  <h2>A Internet ao seu dispor!</h2>
                   <p><span >Domine a Internet e as principais ferramentas online.</span></p>
                   <p><a class="btn btn-md btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
@@ -44,8 +44,8 @@
               <img class="third-slide" src="/static/images/p3.jpg" alt="Third slide">
               <div class="container">
                 <div class="carousel-caption text-left">
-                  <h1><span  style="color:#212529">Documentos e Apresentações Profissionais</span></h1>
-                  <p><span  style="color:#212529">Crie uma boa impressão com apresentações de tirar o fôlego!</span></p>
+                  <h2><span>Documentos e Apresentações Profissionais</span></h2>
+                  <p><span>Crie uma boa impressão com apresentações de tirar o fôlego!</span></p>
                   
                   <p><a class="btn btn-md btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
