--- a/mydidata/templates/mydidata/topic_list.html
+++ b/mydidata/templates/mydidata/topic_list.html
@@ -21,7 +21,7 @@
             </div>
             {# List of Accounts #}
             
-            <div class="list-group">
+            <div class="list-group" style="margin-bottom: 1rem;">
                 {% for topic in topics %}
                     <a href="{{ topic.get_absolute_url }}" class="list-group-item list-group-item-action">{{ topic.topic_title }}</a>
                 {% endfor %}
