Adapting images to screen size

--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -85,8 +85,8 @@
 
           <div class="row featurette">
             <div class="col-md-7">
-              <h2 class="featurette-heading">O computador é um poderoso aliado. <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Clique e veja por você!</span></a></h2>
-              <p class="lead">Nosso conteúdo é preparado para descomplicar as principais ferramentas de escritório e Internet. Desenvolva habilidades em Informática a partir de problemas reais e dê um plus nos seus negócios e na sua vida pessoal de forma divertida e interativa! </p>
+              <h2 class="featurette-heading">O computador como um poderoso aliado. <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Clique e confira!</span></a></h2>
+              <p class="lead">Nosso conteúdo é preparado para descomplicar as principais ferramentas de escritório e Internet. Desenvolva habilidades em Informática a partir de problemas reais e impulsione seus negócios e na sua vida pessoal de forma divertida e interativa! </p>
             </div>
             <div class="col-md-5">
               <img class="featurette-image img-fluid mx-auto" src="/static/images/s6.jpg" alt="Generic placeholder image">
@@ -109,7 +109,7 @@
   
           <div class="row featurette">
             <div class="col-md-7">
-              <h2 class="featurette-heading">Ganhe mais tempo para o que interessa usando planilhas.<a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Clique e veja como é fácil!</span></a></h2>
+              <h2 class="featurette-heading">Domine planilhas e ganhe tempo para o que interessa! <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Clique e veja como é fácil!</span></a></h2>
               <p class="lead">Além de colocar você a frente nas melhores oportunidades, planilhas são indispensáveis para quem deseja colocar o computador a seu serviço! Automatize tarefas rotineiras de controle de gastos e alavanque suas finanças.</p>
             </div>
             <div class="col-md-5">
