--- a/mydidata/static/css/mydidata.css
+++ b/mydidata/static/css/mydidata.css
@@ -20,7 +20,7 @@ body {
   .carousel-caption {
     bottom: -1rem;
     z-index: 10;
-    margin-bottom: 80%;
+    min-width: 80%;
   }
   
   /* Declare heights because of positioning of img element */
