--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -21,7 +21,7 @@
                     <source class="first-slide" srcset="/static/images/s81640.jpg" media="(min-width: 577px)" type="image/jpeg">
                 </picture> -->
 
-              <img class="first-slide img-responsive" src="/static/images/s81.jpg" alt="First slide">
+              <img class="first-slide img-responsive" src="/static/images/s8.jpg" alt="First slide">
               <div class="container">
                 <div class="carousel-caption text-left">
                   <h3>Planilhas trabalhando por você!</h3>
@@ -31,7 +31,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="second-slide" src="/static/images/i11.jpg" alt="Second slide">
+              <img class="second-slide" src="/static/images/i1.jpg" alt="Second slide">
               <div class="container">
                 <div class="carousel-caption text-left">
                   <h3>A Internet ao seu dispor!</h3>
@@ -41,7 +41,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="third-slide" src="/static/images/p3.jpg" alt="Third slide">
+              <img class="third-slide" src="/static/images/s6.jpg" alt="Third slide">
               <div class="container">
                 <div class="carousel-caption text-left">
                   <h3><span>Documentos e Apresentações Profissionais</span></h3>
