Adapting images to screen size

--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -41,7 +41,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="third-slide" src="/static/images/o.jpg" alt="Third slide">
+              <img class="third-slide" src="/static/images/o2.jpg" alt="Third slide">
               <div class="container">
                 <div class="carousel-caption text-left">
                   <h3><span>Documentos e Apresentações Profissionais</span></h3>
