Adapting images to screen size

--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -71,8 +71,8 @@
   
           <!-- Three columns of text below the carousel -->
           <div class="container">
-              <form class="form-inline">
-                    <input class="form-control col-sm-10" type="text" placeholder="O que você deseja aprender?" aria-label="Digite aqui o que você mais deseja aprender.">
+              <form class="form-inline" action="/mydidata/search">
+                    <input class="form-control col-sm-10" name="keyword" type="text" placeholder="O que você deseja aprender?" aria-label="Digite aqui o que você mais deseja aprender.">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
 
