Adapting images to screen size

--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -24,8 +24,8 @@
               <img class="first-slide img-responsive" src="/static/images/s8.jpg" alt="First slide">
               <div class="container">
                 <div class="carousel-caption text-left">
-                  <h3>Planilhas trabalhando por você!</h3>
-                  <p>Domine planilhas eletrônicas e ganhe mais tempo para o que importa!</p>
+                  <h3>Planilhas trabalhando por você </h3>
+                  <p>Domine planilhas eletrônicas e ganhe mais tempo para o que importa.</p>
                   <p><a class="btn btn-md btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
@@ -34,7 +34,7 @@
               <img class="second-slide" src="/static/images/i1.jpg" alt="Second slide">
               <div class="container">
                 <div class="carousel-caption text-left">
-                  <h3>A Internet ao seu dispor!</h3>
+                  <h3>A Internet ao seu dispor </h3>
                   <p><span >Domine a Internet e as principais ferramentas online.</span></p>
                   <p><a class="btn btn-md btn-primary" href="/mydidata/signup/8" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
@@ -85,8 +85,8 @@
 
           <div class="row featurette">
             <div class="col-md-7">
-              <h2 class="featurette-heading">O computador como um poderoso aliado. <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Clique e confira!</span></a></h2>
-              <p class="lead">Nosso conteúdo é preparado para descomplicar as principais ferramentas de escritório e Internet. Desenvolva habilidades em Informática a partir de problemas reais e impulsione seus negócios e na sua vida pessoal de forma divertida e interativa! </p>
+              <h2 class="featurette-heading">O computador como um poderoso aliado. <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Clique e confira.</span></a></h2>
+              <p class="lead">Nosso conteúdo é preparado para descomplicar as principais ferramentas de escritório e Internet. Desenvolva habilidades em Informática a partir de problemas reais e impulsione seus negócios e na sua vida pessoal de forma divertida e interativa. </p>
             </div>
             <div class="col-md-5">
               <img class="featurette-image img-fluid mx-auto" src="/static/images/s6.jpg" alt="Generic placeholder image">
@@ -97,7 +97,7 @@
   
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
-              <h2 class="featurette-heading">Domine os recursos mais modernos em nuvens na Internet. <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Nas nuvens!</span></a></h2>
+              <h2 class="featurette-heading">Domine os recursos mais modernos em nuvens na Internet. <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Nas nuvens</span></a></h2>
               <p class="lead">As últimas tendências apontam para um crescimento do uso de nuvens na Internet. Nelas, você pode criar e editar documentos de forma compartilhada, favorecendo o trabalho em equipe.</p>
             </div>
             <div class="col-md-5 order-md-1">
@@ -109,8 +109,8 @@
   
           <div class="row featurette">
             <div class="col-md-7">
-              <h2 class="featurette-heading">Domine planilhas e ganhe tempo para o que interessa! <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Clique e veja como é fácil!</span></a></h2>
-              <p class="lead">Além de colocar você a frente nas melhores oportunidades, planilhas são indispensáveis para quem deseja colocar o computador a seu serviço! Automatize tarefas rotineiras de controle de gastos e alavanque suas finanças.</p>
+              <h2 class="featurette-heading">Domine planilhas e ganhe tempo para o que interessa! <a href="{% url 'mydidata:disciplines' %}"><span class="text-muted">Clique e veja como é fácil.</span></a></h2>
+              <p class="lead">Além de colocar você a frente nas melhores oportunidades, planilhas são indispensáveis para quem deseja colocar o computador a seu serviço. Automatize tarefas rotineiras de controle de gastos e alavanque suas finanças.</p>
             </div>
             <div class="col-md-5">
               <img class="featurette-image img-fluid mx-auto" src="/static/images/p1.jpg" alt="Generic placeholder image">
